# bubble-shooter

./: CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp
src/board/: CMakeLists.txt
src/board/include/: board.hpp
src/board/include/board/: board.hpp
src/board/src/: board.cpp
src/board/test/: board_test.cpp
src/include/: defaults.hpp  game_settings.hpp
src/projectile/: CMakeLists.txt
src/projectile/include/: collision.hpp  geometry.hpp  projectile.hpp  trajectory.hpp
src/projectile/src/: collision.cpp  projectile.cpp  trajectory.cpp
src/projectile/test/: projectile_test.cpp  projectile_trajectory_test.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/: grid_utils.hpp  sdl2_primitives.hpp  sdl2_renderer.hpp
src/renderer/src/: grid_utils.cpp  sdl2_primitives.cpp  sdl2_renderer.cpp
utils/: CMakeLists.txt
utils/bubble/include/: bubble_color.hpp
utils/bubble/src/: bubble_color.cpp
utils/include/utils/: random.hpp
